# finetune_fun

./: .gitignore  BLOG_POST_19TH_CENTURY_IMPLICIT_INFLUENCE.md  JARVIS_ACCESS.md  README.md  main.py  pyproject.toml
app/: __init__.py  chat.py
configs/: config_19thcentury.yaml  config_persona.yaml
datasets/: 19thcenturybooks.py
evals/: graph.py  question1.py  question2.py  question4.py  question5.py
experiments/: 19thcentury.py  __init__.py  checkpoint_comparison.py  persona.py  questions_comparison.py
experiments/results/: checkpoint_comparison_20260204_231330.csv  checkpoint_comparison_20260204_232517.csv
experiments/results/questions_20260205_024535/: all_results.csv  question_1_racism_pseudoscience.csv  question_2_colonialism.csv  question_3_sexism_medical.csv  question_4_physiognomy.csv  question_5_classism.csv
ftdatasets/: 19thcenturybooks.py  __init__.py  hftopt.py  persona.py  personas.py  sycophancy.py
