[project]
name = "lora-stuff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "evaluate>=0.4.6",
    "huggingface-hub>=1.3.5",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "peft>=0.18.1",
    "safetensors>=0.7.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "sentencepiece>=0.2.1",
    "tensorboard>=2.20.0",
    "tokenizers>=0.22.2",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.2",
    "transformers>=5.0.0",
    "wandb>=0.24.1",
]
